[package]
name = "bookmarker"
version = "0.1.0"
authors = ["nerdthatnoonelikes <kenrag24@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
serenity = { version = "0.10.7", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
reqwest = { version = "0.11", features = ["json"] }
